--- a/portfolio/templates/success_page.html
+++ b/portfolio/templates/success_page.html
@@ -4,7 +4,7 @@
 
 <body>
     <h1>Success!</h1>
-    <p>Your operation was successful.</p> <br><br>
+    <p>Your operation was successful.</p> <br>
     <p>I'll get back to you in a few hours/minutes</p>
 </body>
 {% endblock %}
