--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -45,13 +45,13 @@ footer a img:hover {
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about_me' %}">About Me</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
-                <a href="{% url 'contact' %}" class="btn" style="border: 1px;
-                border-style: solid;
-                border-radius: 30%;
-                font-size: large;
-                color: aliceblue;
-                
-                ">?</a>
+                <li><a href="{% url 'contact' %}" class="btn" style="border: 1px;
+                    border-style: solid;
+                    border-radius: 30%;
+                    font-size: large;
+                    color: aliceblue;
+                    
+                    ">?</a></li>
 
                 {% endif %}
 
