--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -3,8 +3,8 @@
 {% block content %}
 
   <form method="post" action="{% url 'contact' %}">
-    <h2>Send a Message</h2> <br>
-    <p>Any info! I will be glad to hear from you</p>
+    <h2>Send a Message</h2> 
+    <p>Any info! I will be glad to hear from you.</p> <br>
     {% csrf_token %}
     <label for="username">Email:</label>
     <input type="email" name="email" required>
