--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -164,13 +164,14 @@ input,
 
   /* Styling the submit button */
   button[type="submit"] {
-    width: 100%;
+    width: 20%;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin: 20px;
   }
   
   /* Hover effect on submit button */
