added responsive design

--- a/portfolio/templates/about_me.html
+++ b/portfolio/templates/about_me.html
@@ -8,12 +8,11 @@
     <section id="about" class="about">
         <div class="about-content">
             <h2>About Me</h2>
-            <p>Welcome to my portfolio! I'm a passionate computer engineer with a strong background in Computer Networks, Linux Systems, Web Development, Embedded Systems and Cybersecurity</p>
+            <p>Welcome to my portfolio! I'm a passionate computer engineer with a strong background in Computer Networks, Linux Systems, Web Development, Embedded Systems and Cybersecurity.</p>
             <p>Here are a few things about me:
-                I am currently attending a degree in Computer Engineering from Makerere University.I am much into computer communication networks.
+                I am currently attending a degree in Computer Engineering from Makerere University, with more interest in deploying and maintaing secure computing systems and communication networks.  I enjoy solving complex problems and building innovative solutions.
                 I also do web development using technologies like Django, HTML, CSS, and JavaScript.
-                I am recently highly interested in Information Security, i am very passionate about having peopl's networks, computer systems and data highly secured.
-                I enjoy solving complex problems and building innovative solutions.
+               
                 
             </p>    
             <a href="{% url 'profile' %}" class="btn">View My Works</a>
