--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -31,7 +31,7 @@
             <h2>Welcome!</h2>
             <b><p>Take your time and explore my portfolio..!</p></b>
             <p>Hello there! I'm Samuel Kanyesigye, a Computer Engineering student with a passion for technology and innovation. My journey in the world of technology has equipped me with a diverse skill set, ranging from electronics and networks to web development and cybersecurity.</p>
-            <p>With a curious mind and a knack for problem-solving, I love delving into the intricacies of various technologies, exploring their possibilities, and creating solutions that make a positive impact.</p>
+            <p>With a curious mind for problem-solving, I love interacting with various technologies, exploring their possibilities, and creating solutions that can make a positive impact.</p>
             <p>Feel free to explore my portfolio and discover the projects that showcase my dedication to learning, creativity, and the pursuit of excellence.</p>
             <a href="{% url 'profile_1' %}" class="btn">Explore My Work</a>
         </div>
